[gd_scene load_steps=15 format=3 uid="uid://b2u3ab8aorqqg"]

[ext_resource type="Script" path="res://game.gd" id="1_ye45a"]
[ext_resource type="PackedScene" uid="uid://cefkthik5xabh" path="res://orb.tscn" id="2_icx0f"]
[ext_resource type="Script" path="res://score_indicator.gd" id="3_femau"]
[ext_resource type="AudioStream" uid="uid://dukgljr0u3hjj" path="res://orbs_up.mp3" id="4_3rvuf"]
[ext_resource type="AudioStream" uid="uid://cpfsl3nre6hpg" path="res://glass-wind-157910.mp3" id="4_yxbt6"]
[ext_resource type="AudioStream" uid="uid://dxwog4bwvp6cq" path="res://magic-charge-mana-2-186628.mp3" id="5_t6as0"]
[ext_resource type="PackedScene" uid="uid://dy5dtls2d8cum" path="res://particle_effect.tscn" id="7_dqwkn"]
[ext_resource type="Texture2D" uid="uid://dev55pshc4u6p" path="res://light_texture.tres" id="8_x201r"]

[sub_resource type="Gradient" id="Gradient_erxc8"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.522727, 1)
colors = PackedColorArray(0.352941, 0.352941, 0.352941, 1, 0.235294, 0.235294, 0.235294, 1, 0.352941, 0.352941, 0.352941, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_52wmk"]
gradient = SubResource("Gradient_erxc8")
width = 512
height = 512

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hfs5c"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_c56cs"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_j0jcc"]
resource_local_to_scene = true
interpolation_mode = 2
offsets = PackedFloat32Array(0.448052, 1)
colors = PackedColorArray(1, 1, 0.721569, 1, 0.12549, 0.12549, 0.12549, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yvewy"]
resource_local_to_scene = true
gradient = SubResource("Gradient_j0jcc")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.325688, 0.527523)

[node name="Game" type="Node"]
script = ExtResource("1_ye45a")
orbObj = ExtResource("2_icx0f")

[node name="ScoreIndicator" type="Label" parent="."]
visible = false
top_level = true
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.0
offset_right = 20.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 200
text = "Test
"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_femau")

[node name="IndicatorTimer" type="Timer" parent="ScoreIndicator"]
wait_time = 2.0

[node name="BurnBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.505882, 0.266667, 1)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
grow_horizontal = 0
grow_vertical = 2
value = 10.0
fill_mode = 3
show_percentage = false

[node name="BurnTimer" type="Timer" parent="."]
wait_time = 500.0

[node name="UI" type="Control" parent="."]
z_index = -10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -4707.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50

[node name="ScoreBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.14902, 1, 1)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 99.0
grow_horizontal = 2
show_percentage = false

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 55
text = "RESET"

[node name="UpOrbs" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3rvuf")

[node name="DownOrbs" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t6as0")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yxbt6")
autoplay = true
parameters/looping = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -20
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_52wmk")
stretch_mode = 1

[node name="ParticleEffect3" parent="." instance=ExtResource("7_dqwkn")]
position = Vector2(3789, 2280)

[node name="ParticleEffect2" parent="." instance=ExtResource("7_dqwkn")]
position = Vector2(2526, 1520)

[node name="ParticleEffect" parent="." instance=ExtResource("7_dqwkn")]
position = Vector2(1263, 760)

[node name="Uplight" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_hfs5c")
texture = ExtResource("8_x201r")

[node name="Downlight" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_c56cs")
rotation = 3.14159
texture = SubResource("GradientTexture2D_yvewy")

[connection signal="timeout" from="ScoreIndicator/IndicatorTimer" to="ScoreIndicator" method="_on_indicator_timer_timeout"]
[connection signal="gui_input" from="BurnBar" to="." method="_on_burn_bar_gui_input"]
[connection signal="timeout" from="BurnTimer" to="." method="_on_timer_timeout"]
[connection signal="resized" from="UI" to="." method="_on_ui_resized"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
